[gd_scene load_steps=59 format=2]

[ext_resource path="res://Scripts/LevelPartCommon.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Structures/Floopy Tower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/Computer Room/Mouse.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Enemies/Computer Room/CD Punch.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Utils/RepeatingSpawner.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Platforms/Wooden Platform 400x100.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Platforms/Softwood Platform 100x100.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Platforms/Enemy Blocking Platform.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Power Ups/HealPotion.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Power Ups/DefensivePotion.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Power Ups/Hyper Potion.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/PassingTrigger.gd" type="Script" id=12]

[node name="1-4" type="Node2D"]

script = ExtResource( 1 )

[node name="Backgrounds" type="Node2D" parent="."]


[node name="Structures" type="Node2D" parent="."]


[node name="Floopy Tower" parent="Structures" instance=ExtResource( 2 )]

position = Vector2( 3800, -1000 )
full_health = 1500

[node name="Enemies" type="Node2D" parent="."]


[node name="Mouse" parent="Enemies" instance=ExtResource( 3 )]

position = Vector2( 4450, -450 )
ACTIVATE_RANGE = 2400

[node name="CD Punch" parent="Enemies" instance=ExtResource( 4 )]

position = Vector2( 3782, -518 )
ACTIVATE_RANGE = 1250

[node name="CD Punch Spawn" type="Position2D" parent="Enemies"]

position = Vector2( 3782, -518 )
script = ExtResource( 5 )
mob_path = "res://Scenes/Enemies/Computer Room/CD Punch.tscn"
activate_range = 3000
spawn_delay = 2
total_count = 100

[node name="Platforms" type="Node2D" parent="."]

editor/display_folded = true

[node name="Wooden Platform 400x100" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 200, -50 )

[node name="Wooden Platform 400x102" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 600, -50 )

[node name="Softwood Platform 100x100" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 50, -150 )

[node name="Softwood Platform 100x101" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 150, -150 )

[node name="Softwood Platform 100x102" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 250, -150 )

[node name="Softwood Platform 100x103" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 350, -150 )

[node name="Softwood Platform 100x104" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 450, -150 )

[node name="Softwood Platform 100x107" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 550, -150 )

[node name="Softwood Platform 100x108" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 150, -250 )

[node name="Softwood Platform 100x109" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 650, -250 )

[node name="Softwood Platform 100x118" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 450, -250 )

[node name="Softwood Platform 100x120" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 550, -250 )

[node name="Softwood Platform 100x110" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 650, -150 )

[node name="Softwood Platform 100x111" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 950, -150 )

[node name="Softwood Platform 100x112" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 1050, -150 )

[node name="Softwood Platform 100x113" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 1150, -150 )

[node name="Softwood Platform 100x114" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 750, -150 )

[node name="Softwood Platform 100x115" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 750, -250 )

[node name="Softwood Platform 100x116" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 1050, -250 )

[node name="Softwood Platform 100x121" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 1050, -350 )

[node name="Softwood Platform 100x122" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 1150, -350 )

[node name="Softwood Platform 100x117" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 850, -150 )

[node name="Softwood Platform 100x119" parent="Platforms" instance=ExtResource( 7 )]

position = Vector2( 1150, -250 )

[node name="Wooden Platform 400x104" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 1000, -50 )

[node name="Wooden Platform 400x105" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 1400, -350 )

[node name="Wooden Platform 400x109" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 1800, -350 )

[node name="Wooden Platform 400x110" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 2200, -350 )

[node name="Wooden Platform 400x111" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 2600, -350 )

[node name="Wooden Platform 400x112" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 3000, -350 )

[node name="Wooden Platform 400x113" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 3400, -350 )

[node name="Wooden Platform 400x114" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 3800, -350 )

[node name="Wooden Platform 400x115" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 4200, -350 )

[node name="Wooden Platform 400x116" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 4600, -350 )

[node name="Wooden Platform 400x120" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 5000, -350 )

[node name="Wooden Platform 400x121" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 5400, -350 )

[node name="Wooden Platform 400x117" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 4600, -250 )

[node name="Wooden Platform 400x118" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 4600, -150 )

[node name="Wooden Platform 400x119" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 4600, -50 )

[node name="Wooden Platform 400x106" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 1400, -250 )

[node name="Wooden Platform 400x107" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 1400, -50 )

[node name="Wooden Platform 400x108" parent="Platforms" instance=ExtResource( 6 )]

position = Vector2( 1400, -150 )

[node name="Enemy Blocking Platform" parent="Platforms" instance=ExtResource( 8 )]

position = Vector2( 4850, -450 )

[node name="Enemy Blocking Platform2" parent="Platforms" instance=ExtResource( 8 )]

position = Vector2( 4050, -450 )

[node name="Enemy Blocking Platform3" parent="Platforms" instance=ExtResource( 8 )]

position = Vector2( 1750, -450 )

[node name="Power Ups" type="Node2D" parent="."]

editor/display_folded = true

[node name="HealPotion" parent="Power Ups" instance=ExtResource( 9 )]

position = Vector2( 900, -200 )

[node name="HealPotion1" parent="Power Ups" instance=ExtResource( 9 )]

position = Vector2( 300, -200 )

[node name="DefensivePotion" parent="Power Ups" instance=ExtResource( 10 )]

position = Vector2( 1300, -450 )

[node name="Hyper Potion" parent="Power Ups" instance=ExtResource( 11 )]

position = Vector2( 1500, -450 )

[node name="Camera Updater" type="Position2D" parent="."]

position = Vector2( 1700, -400 )
script = ExtResource( 12 )
x_check = 2
y_check = 1

[connection signal="destroyed"  from="Structures/Floopy Tower"  to="." method="update_right_bound" binds=[ 33000 ]]

[connection signal="destroyed"  from="Structures/Floopy Tower"  to="." method="update_left_margin" binds=[ 0.0 ]]

[connection signal="destroyed"  from="Structures/Floopy Tower"  to="." method="update_right_margin" binds=[ 0.4 ]]

[connection signal="destroyed"  from="Structures/Floopy Tower"  to="." method="instance_level_part" binds=[ "1-5-1" ]]

[connection signal="destroyed"  from="Structures/Floopy Tower"  to="Platforms/Enemy Blocking Platform" method="queue_free" binds=[  ]]

[connection signal="destroyed"  from="Structures/Floopy Tower"  to="Platforms/Enemy Blocking Platform2" method="queue_free" binds=[  ]]

[connection signal="destroyed"  from="Structures/Floopy Tower"  to="Enemies/CD Punch Spawn" method="stop_further_spawning" binds=[  ]]

[connection signal="defeated"  from="Enemies/CD Punch"  to="Enemies/CD Punch Spawn" method="spawn_mob" binds=[  ]]

[connection signal="passed"  from="Camera Updater"  to="." method="remove_level_part" binds=[ "1-3" ]]

[connection signal="passed"  from="Camera Updater"  to="." method="update_left_bound" binds=[ 25800 ]]

[connection signal="passed"  from="Camera Updater"  to="." method="update_right_bound" binds=[ 29350 ]]

[connection signal="passed"  from="Camera Updater"  to="." method="update_bottom_bound" binds=[ -400 ]]

[connection signal="passed"  from="Camera Updater"  to="." method="update_left_margin" binds=[ 0.2 ]]

[connection signal="passed"  from="Camera Updater"  to="." method="update_right_margin" binds=[ 0.5 ]]
